집가고싶다

--- a/teamSsum/.settings/org.eclipse.core.resources.prefs
+++ b/teamSsum/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/py/kakao_analysis_final_integrating.py=utf-8
 encoding//WebContent/py/new_word_dic\ (1).py=utf-8
 encoding//WebContent/py/new_word_dic.py=utf-8
 encoding//WebContent/py/show_crawling.py=ms949
